--- a/workspace/html/naver.html
+++ b/workspace/html/naver.html
@@ -4,38 +4,62 @@
   <meta charset="UTF-8">
   <title>네이버</title>
   <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico"/>
+  <link rel="stylesheet" href="../css/naver.css">
 </head>
 <body>
-  <h1>네이버</h1>
-  <h2>검색창</h2>
-  <fieldset>
-    <legend>검색</legend>
-    <input />
-    <input type="checkbox"/>
-    <input type="radio"/>
-    <input type="radio"/>
-  </fieldset>
-  <ul>
-    <li>메일</li>
-    <li>카페</li>
-    <li>블로그</li>
-    <li>지식iN</li>
-    <li>쇼핑</li>
-    <li>Pay</li>
-    <li>TV</li>
-  </ul>
-  <h2>실시간 검색어</h2>
-  <h3>연합뉴스</h3>
-  <ol>
-    <li>충격) ~~~</li>
-    <li>충격) ~~~</li>
-    <li>충격) ~~~</li>
-  </ol>
-  <h3>로그인</h3>
-  <h3>뉴스</h3>
-  <h3>법률</h3>
-  <h3>쇼핑</h3>
-  <h3>뉴스</h3>
+  <header>
+    <div id="header-center"> <!-- 가운데 정렬용 div -->
+      <div>
+        <span>네이버를 시작페이지로</span>
+        <span>쥬니어네이버</span>
+        <span>해피빈</span>
+      </div>
+      <div id="header-search">
+        <h1>
+          <a href= "https://www.naver.com">네이버</a>
+        </h1>
+        <h2>검색창</h2>
+        <fieldset>
+          <legend>검색</legend>
+          <input />
+          <input type="checkbox"/>
+          <input type="radio"/>
+          <input type="radio"/>
+        </fieldset>
+      </div>
+    </div>
+
+  </header>
+  <nav>
+    <ul>
+      <li>메일</li>
+      <li>카페</li>
+      <li>블로그</li>
+      <li>지식iN</li>
+      <li>쇼핑</li>
+      <li>Pay</li>
+      <li>TV</li>
+    </ul>
+  </nav>
+  <main>
+    <h2>실시간 검색어</h2>
+    <h3>연합뉴스</h3>
+    <ol>
+      <li>충격) ~~~</li>
+      <li>충격) ~~~</li>
+      <li>충격) ~~~</li>
+    </ol>
+    <h3>로그인</h3>
+    <h3>뉴스</h3>
+    <h3>법률</h3>
+    <h3>쇼핑</h3>
+    <h3>뉴스</h3>
+  </main>
+  <footer>
+    <div>공지사항</div>
+    <div>Creators</div>
+    <div>회사소개</div>
+  </footer>
 
 </body>
 </html>
